fix vertical alignment of route icons

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -849,6 +849,7 @@ ol.route-list {
     cursor: pointer;
     text-decoration: none !important;
     margin-top: -0.16em;
+    line-height: 1.3rem;
   }
 }
 
